--- a/report/report.bib
+++ b/report/report.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Spurgin at 2016-12-05 13:14:19 -0600 
+%% Created for Will Spurgin at 2016-12-05 21:57:47 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,9 +10,9 @@
 
 
 @webpage{rMarkdown2015,
-	Author = {JJ Allaire, et al.},
+	Author = {Allaire, JJ and et al.},
 	Date-Added = {2016-12-05 19:06:12 +0000},
-	Date-Modified = {2016-12-05 19:13:30 +0000},
+	Date-Modified = {2016-12-06 03:57:47 +0000},
 	Lastchecked = {12/05/2016},
 	Title = {R Markdown},
 	Url = {http://rmarkdown.rstudio.com},
